# badshuffle

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES_0.0.10.md  RELEASE_NOTES_0.0.11.md  RELEASE_NOTES_0.0.12.md  RELEASE_NOTES_0.0.9.md  SECURITY_AUDIT.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json
.claude/: settings.local.json
AI/: AGENT_ASSISTANT_PLAN.md  AI-System-Setup.md  ARCHITECTURE.md  BADSHUFFLE_AGENTIC_CODE_AUDIT.md  BEGIN-PHASE-5.md  BEGIN-PHASE-6A.md  BEGIN-PHASE-6B.md  CODE_AUDIT_PLAN.md  CURRENT_FOCUS.md  DECISIONS.md  HANDOFF.md  Next-Release.md  PHASE4_CODEX_PROMPT.md  PROJECT_CONTEXT.md  TODO.md  WORKFLOW.md  ideas.md
ai/: API_DEVELOPMENT.md  ARCHITECTURE.md  CURSOR_BRIEFING.md  DECISIONS.md  (+13 more)
rust-core/: Cargo.toml  README.md
rust-core/crates/api/: Cargo.toml
rust-core/crates/api/src/: main.rs
rust-core/crates/config/: Cargo.toml
rust-core/crates/config/src/: lib.rs
rust-core/crates/db/: Cargo.toml
rust-core/crates/db/src/: lib.rs
rust-core/crates/events/: Cargo.toml
rust-core/crates/events/src/: lib.rs
rust-core/crates/inventory-engine/: Cargo.toml
rust-core/crates/inventory-engine/src/: lib.rs
rust-core/crates/pricing-engine/: Cargo.toml
rust-core/crates/pricing-engine/src/: lib.rs
rust-core/crates/shared-types/: Cargo.toml
rust-core/crates/shared-types/src/: lib.rs
rust-core/crates/telemetry/: Cargo.toml
rust-core/crates/telemetry/src/: lib.rs
rust-core/docs/: ARCHITECTURE.md  INVENTORY_ENGINE.md
(+321 files in other folders)
