[workspace]
members = [
  "crates/api",
  "crates/config",
  "crates/db",
  "crates/events",
  "crates/inventory-engine",
  "crates/pricing-engine",
  "crates/shared-types",
  "crates/telemetry",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["BadShuffle"]

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["http1", "json"] }
once_cell = "1"
prometheus = "0.13"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
